tests/machine/x/java/map_assign.java
import java.util.*;
public class Main {
	static int scores = java.util.Map.of("alice", 1);
	public static void main(String[] args) {
	scores = 2;
	System.out.println(scores.get("bob"));
	}
}
